dependencies improved